--- a/index.html
+++ b/index.html
@@ -277,6 +277,27 @@
                         </div>
                     </div>
                 </main>
+                
+    <!-- Login Modal -->
+    <div id="login-modal" class="fixed inset-0 z-50 flex items-center justify-center p-4 bg-black/60 hidden">
+        <div class="glass-effect w-full max-w-sm rounded-2xl shadow-2xl p-4 sm:p-6 relative flex flex-col">
+            <h2 class="text-xl sm:text-2xl font-bold text-slate-100 mb-6 text-center">Welcome Back</h2>
+            <form id="login-form" class="space-y-4">
+                <div>
+                    <label for="email" class="text-sm font-medium text-slate-300">Email</label>
+                    <input type="email" id="email" class="w-full bg-slate-800/60 border-slate-700/50 rounded-lg py-2.5 px-3 text-slate-100 mt-1" placeholder="you@example.com">
+                </div>
+                <div>
+                    <label for="password" class="text-sm font-medium text-slate-300">Password</label>
+                    <input type="password" id="password" class="w-full bg-slate-800/60 border-slate-700/50 rounded-lg py-2.5 px-3 text-slate-100 mt-1" placeholder="••••••••">
+                </div>
+                <button type="submit" id="login-button" class="w-full bg-violet-600 hover:bg-violet-700 text-white rounded-lg py-2.5 font-semibold">Login / Register</button>
+            </form>
+            <button id="close-login-modal" class="absolute top-4 right-4 p-2 rounded-full bg-slate-800/60 hover:bg-slate-700/80 text-slate-300">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-5 w-5"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
+            </button>
+        </div>
+    </div>
 
     <!-- Settings Modal -->
     <div id="settings-modal" class="fixed inset-0 z-50 flex items-center justify-center p-4 bg-black/60 hidden">
