Solved Actual Flashcards sidebar bug

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </aside>
 
         <!-- Right Sidebar for Flashcards -->
-        <aside id="flashcards-right-sidebar" class="hidden md:flex fixed inset-0 z-50 md:z-auto md:relative md:inset-auto w-full md:w-64 flex-col glass-effect p-4 md:border-l md:border-white/10 h-full">
+        <aside id="flashcards-right-sidebar" class="hidden fixed inset-0 z-50 md:z-auto md:relative md:inset-auto w-full md:w-64 flex-col glass-effect p-4 md:border-l md:border-white/10 h-full">
             <button id="close-flashcards-right-sidebar" class="md:hidden absolute top-4 right-4 p-2 rounded-full bg-slate-800/60 hover:bg-slate-700/80 text-slate-300"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-5 w-5"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg></button>
             <h3 class="text-lg font-semibold mb-4">Flashcard Options</h3>
             <div class="space-y-4">
