--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <svg class="h-8 w-8 text-violet-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"/><path d="M5 3v4"/><path d="M19 17v4"/><path d="M3 5h4"/><path d="M17 19h4"/></svg>
                 <span class="text-xl font-bold text-slate-100">Starlight RAG</span>
             </div>
-            <div class="flex-grow pt-4 overflow-y-auto sidebar-scroll">
+            <div id="file-management-section" class="flex-grow pt-4 overflow-y-auto sidebar-scroll">
                 <button id="upload-file-button" class="flex items-center justify-center w-full gap-2 py-2.5 px-4 bg-violet-600 hover:bg-violet-700 text-white rounded-lg transition-colors mb-4 text-sm font-semibold">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-upload-cloud h-5 w-5"><path d="M4 14.899A7 7 0 1 1 15.71 8h1.79a4.5 4.5 0 0 1 2.5 8.242"/><path d="M12 12v9"/><path d="m16 16-4-4-4 4"/></svg>
                     <span>Upload File</span>
@@ -79,14 +79,20 @@
                 <ul id="sidebar-file-list" class="space-y-1 text-sm"></ul>
             </div>
             <div class="flex-shrink-0 pt-4 border-t border-white/10">
-                 <button id="open-settings-button" class="w-full flex items-center gap-3 p-2 rounded-lg hover:bg-slate-800/50 transition-colors">
-                     <img class="h-9 w-9 rounded-full" src="https://placehold.co/100x100/7c3aed/ffffff?text=U" alt="User avatar">
-                     <div class="text-left">
-                         <p class="font-semibold text-sm text-slate-200">Test User</p>
-                         <p class="text-xs text-slate-400">test@example.com</p>
-                     </div>
-                     <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ml-auto lucide lucide-settings-2 h-5 w-5 text-slate-400"><path d="M20 7h-9"/><path d="M14 17H5"/><circle cx="17" cy="17" r="3"/><circle cx="7" cy="7" r="3"/></svg>
-                 </button>
+                <div id="user-actions-container">
+                    <button id="login-signup-button" class="w-full flex items-center justify-center gap-2 py-2.5 px-4 bg-violet-600 hover:bg-violet-700 text-white rounded-lg transition-colors text-sm font-semibold">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-log-in h-5 w-5"><path d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"/><polyline points="10 17 15 12 10 7"/><line x1="15" y1="12" x2="3" y2="12"/></svg>
+                        <span>Login & Sign Up</span>
+                    </button>
+                    <button id="open-settings-button" class="w-full flex items-center gap-3 p-2 rounded-lg hover:bg-slate-800/50 transition-colors hidden">
+                        <img class="h-9 w-9 rounded-full" src="https://placehold.co/100x100/7c3aed/ffffff?text=U" alt="User avatar">
+                        <div class="text-left">
+                            <p class="font-semibold text-sm text-slate-200">Test User</p>
+                            <p class="text-xs text-slate-400">test@example.com</p>
+                        </div>
+                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="ml-auto lucide lucide-settings-2 h-5 w-5 text-slate-400"><path d="M20 7h-9"/><path d="M14 17H5"/><circle cx="17" cy="17" r="3"/><circle cx="7" cy="7" r="3"/></svg>
+                    </button>
+                </div>
             </div>
         </aside>
 
