--- a/index.html
+++ b/index.html
@@ -65,9 +65,13 @@
     <div class="relative flex flex-col md:flex-row h-screen overflow-hidden">
         <!-- Sidebar -->
         <aside id="sidebar" class="fixed inset-y-0 left-0 z-40 flex w-64 flex-col glass-effect p-4 border-r border-white/10 transform -translate-x-full md:relative md:translate-x-0 transition-transform duration-300 ease-in-out">
-            <div class="flex items-center space-x-2 pb-4 border-b border-white/10">
+            <div class="flex items-center space-x-2 pb-4 border-b border-white/10 relative">
                 <svg class="h-8 w-8 text-violet-500" xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="m12 3-1.912 5.813a2 2 0 0 1-1.275 1.275L3 12l5.813 1.912a2 2 0 0 1 1.275 1.275L12 21l1.912-5.813a2 2 0 0 1 1.275-1.275L21 12l-5.813-1.912a2 2 0 0 1-1.275-1.275L12 3Z"/><path d="M5 3v4"/><path d="M19 17v4"/><path d="M3 5h4"/><path d="M17 19h4"/></svg>
                 <span class="text-xl font-bold text-slate-100">Starlight RAG</span>
+                <button id="close-main-sidebar" aria-controls="sidebar" aria-expanded="true" class="md:hidden absolute right-0 top-0 -mt-1 p-2 rounded-full bg-slate-800/60 hover:bg-slate-700/80 text-slate-300">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-5 w-5"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
+                    <span class="sr-only">Close main sidebar</span>
+                </button>
             </div>
             <div id="file-management-section" class="flex-grow pt-4 overflow-y-auto sidebar-scroll">
                 <button id="upload-file-button" class="flex items-center justify-center w-full gap-2 py-2.5 px-4 bg-violet-600 hover:bg-violet-700 text-white rounded-lg transition-colors mb-4 text-sm font-semibold">
@@ -202,7 +206,12 @@
             </div>
         </div>
         <!-- Right Sidebar for Chat History -->
-        <aside id="right-sidebar" class="right-sidebar-mobile hidden absolute md:relative w-full md:w-64 flex-col glass-effect p-4 border-l border-white/10 h-full">
+        <button id="open-right-sidebar-handle" aria-controls="right-sidebar" aria-expanded="false" class="hidden fixed right-2 top-1/2 -translate-y-1/2 z-40 rounded-full bg-slate-800/60 hover:bg-slate-700/80 text-slate-200 px-3 py-2 shadow md:block">
+            <span class="text-lg">&lt;</span>
+            <span class="sr-only">Open right sidebar</span>
+        </button>
+        <aside id="right-sidebar" class="right-sidebar-mobile hidden absolute md:relative w-full md:w-64 flex-col glass-effect p-4 border-l border-white/10 h-full" aria-hidden="true">
+            <button id="close-right-sidebar" aria-controls="right-sidebar" aria-expanded="true" class="absolute top-4 right-4 p-2 rounded-full bg-slate-800/60 hover:bg-slate-700/80 text-slate-300"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-5 w-5"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg><span class="sr-only">Close right sidebar</span></button>
             <h3 class="text-lg font-semibold mb-4">Chat History</h3>
             <div id="chat-history-container" class="flex-grow overflow-y-auto">
                 <!-- Chat history will be rendered here -->
@@ -220,7 +229,7 @@
         </aside>
 
         <!-- Right Sidebar for Flashcards -->
-        <aside id="flashcards-right-sidebar" class="hidden fixed inset-0 z-50 md:z-auto md:relative md:inset-auto w-full md:w-64 flex-col glass-effect p-4 md:border-l md:border-white/10 h-full">
+        <aside id="flashcards-right-sidebar" class="right-sidebar-mobile hidden absolute md:relative w-full md:w-64 flex-col glass-effect p-4 md:border-l md:border-white/10 h-full" aria-hidden="true">
             <button id="close-flashcards-right-sidebar" class="md:hidden absolute top-4 right-4 p-2 rounded-full bg-slate-800/60 hover:bg-slate-700/80 text-slate-300"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-5 w-5"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg></button>
             <h3 class="text-lg font-semibold mb-4">Flashcard Options</h3>
             <div class="space-y-4">
@@ -256,7 +265,8 @@
         </aside>
 
         <!-- Right Sidebar for Quiz -->
-        <aside id="quiz-right-sidebar" class="hidden absolute md:relative w-full md:w-64 flex-col glass-effect p-4 border-l border-white/10 h-full">
+        <aside id="quiz-right-sidebar" class="right-sidebar-mobile hidden absolute md:relative w-full md:w-64 flex-col glass-effect p-4 border-l border-white/10 h-full" aria-hidden="true">
+            <button id="close-quiz-right-sidebar" class="md:hidden absolute top-4 right-4 p-2 rounded-full bg-slate-800/60 hover:bg-slate-700/80 text-slate-300"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="h-5 w-5"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg></button>
             <h3 class="text-lg font-semibold mb-4">Quiz Options</h3>
             <div class="space-y-4">
                 <div>
