--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     
-    <!-- Lucide Icons (optional) -->
-    <script src="https://cdn.jsdelivr.net/npm/lucide-static@latest/dist/lucide.min.js"></script>
+    <!-- Lucide Icons (UMD) -->
+    <script src="https://cdn.jsdelivr.net/npm/lucide@latest/dist/umd/lucide.min.js"></script>
 
     <!-- Custom Styles -->
     <link rel="stylesheet" href="style.css">
@@ -113,22 +113,30 @@
                         <span class="text-xs sm:text-sm text-slate-400 hidden md:inline">Your AI-Powered Data Assistant</span>
                         <div class="flex-grow"></div>
                         <div class="flex items-center gap-2">
-                            <button id="chat-button" class="mode-button flex items-center gap-2 py-2 px-3 rounded-lg transition-colors text-sm font-semibold active">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-message-circle h-4 w-4 text-green-400"></svg>
-                                <span class="hidden sm:inline">Chat</span>
+                            
+                            <!-- Chat Button -->
+                            <button id="chat-button" type="button" aria-label="Open Chat"
+                            class="mode-button flex items-center gap-2 py-2 px-3 rounded-lg transition-colors text-sm font-semibold hover:bg-gray-100 dark:hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-green-400">
+                            <!-- Icon with descriptive role -->
+                            <i data-lucide="message-circle" class="h-5 w-5 text-green-500 dark:text-green-300" aria-hidden="true"></i>
+                            <!-- Text label visible only on larger screens -->
+                            <span class="hidden sm:inline">Chat</span>
                             </button>
-                            <button id="flashcards-button" class="mode-button flex items-center gap-2 py-2 px-3 rounded-lg transition-colors text-sm font-semibold">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-copy h-4 w-4 text-violet-400"></svg>
-                                <span class="hidden sm:inline">Flashcards</span>
+
+                            <!-- Flashcards Button -->
+                            <button id="flashcards-button" type="button" aria-label="View Flashcards"
+                            class="mode-button flex items-center gap-2 py-2 px-3 rounded-lg transition-colors text-sm font-semibold hover:bg-gray-100 dark:hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-violet-400">
+                            <i data-lucide="copy" class="h-5 w-5 text-violet-500 dark:text-violet-300" aria-hidden="true"></i>
+                            <span class="hidden sm:inline">Flashcards</span>
                             </button>
-                            <button id="quiz-button" class="mode-button flex items-center gap-2 py-2 px-3 rounded-lg transition-colors text-sm font-semibold">
-                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="lucide lucide-swords h-4 w-4 text-sky-400"></svg>
-                                <span class="hidden sm:inline">Quiz Me</span>
+
+                            <!-- Quiz Button -->
+                            <button id="quiz-button" type="button" aria-label="Start Quiz"
+                            class="mode-button flex items-center gap-2 py-2 px-3 rounded-lg transition-colors text-sm font-semibold hover:bg-gray-100 dark:hover:bg-gray-800 focus:outline-none focus:ring-2 focus:ring-sky-400">
+                            <i data-lucide="swords" class="h-5 w-5 text-sky-500 dark:text-sky-300" aria-hidden="true"></i>
+                            <span class="hidden sm:inline">Quiz Me</span>
                             </button>
-                            <button id="right-sidebar-toggle-button" class="p-1 text-slate-300 hover:text-violet-400 rounded-md md:hidden ml-2 sm:ml-4">
-                                <i id="open-right-sidebar-icon" data-lucide="chevron-right" class="h-6 w-6"></i>
-                                <i id="close-right-sidebar-icon" data-lucide="x" class="h-6 w-6 hidden"></i>
-                            </button>
+
                         </div>
                     </div>
                 </header>
