Fixed: Mobile UI for sidebar opening on login and making all 3 mode views independent

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                     </div>
                 </main>
 
-                <main id="flashcards-view" class="view hidden flex-grow flex-col glass-effect rounded-2xl shadow-2xl max-w-3xl w-full mx-auto overflow-hidden">
-                    <div class="p-4 sm:p-6">
+                <main id="flashcards-view" class="view hidden flex-grow flex flex-col glass-effect rounded-2xl shadow-2xl max-w-3xl w-full mx-auto overflow-hidden">
+                    <div class="p-4 sm:p-6 h-full overflow-y-auto">
                         <h2 class="text-xl sm:text-2xl font-bold text-slate-100 mb-4">Flashcards</h2>
                         <div id="flashcard" class="flashcard w-full h-64 sm:h-80 perspective-[1000px] cursor-pointer mb-4">
                             <div class="flashcard-inner relative w-full h-full">
@@ -202,7 +202,7 @@
                 </main>
 
                 <main id="quiz-view" class="view hidden flex-grow flex-col glass-effect rounded-2xl shadow-2xl max-w-3xl w-full mx-auto overflow-hidden">
-                    <div class="p-4 sm:p-6">
+                    <div class="p-4 sm:p-6 h-full overflow-y-auto">
                         <h2 class="text-xl sm:text-2xl font-bold text-slate-100 mb-2">Quiz Time!</h2>
                         <p id="quiz-progress-text" class="text-sm text-slate-400 mb-4">Question 1 of 5</p>
                         <div class="w-full bg-slate-700/50 rounded-full h-2 mb-6">
