1. Sidebars & View Switching: Lacking Smoothness *** 2. Theme Consistency: Incomplete Light Mode *** 3. Component Design & Interactivity: Needs Polish

--- a/index.html
+++ b/index.html
@@ -19,12 +19,10 @@
     <!-- Custom Styles -->
     <link rel="stylesheet" href="style.css">
 
-<style>
-    /* Smooth transition for sidebar sliding */
-    .right-sidebar-mobile {
-        transition: transform 0.3s ease-in-out;
-    }
+    <!-- Custom Styles -->
+    <link rel="stylesheet" href="style.css">
 
+<style>
     /* Mobile-specific styles for the right sidebar */
     @media (max-width: 767px) {
         .right-sidebar-mobile {
